[package]
edition = "2021"
name = "rblog"
version = "0.1.0"

[dependencies]
autocfg = "1.1.0"
libc = "0.2.125"
random-number = "0.1.7"
rocket = { version="0.5.0-rc.2", features = ["json","secrets"] }
yansi = "0.5.1"
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json= "1.0.81"
rbson = "2.0.3"
rbatis = { version = "3.1.8", features = ["mysql","debug_mode"] }
chrono = "0.4.19"
lazy_static = "1.4.0"
sha2="0.10.2"
asciis="0.1.3"
md5 = "0.7.0"
captcha-rs = "*"
uuid = { version = "1.1.1", features = [ "v4", "fast-rng", "macro-diagnostics"] }
redis = { version = "*", features = ["tokio-comp","r2d2"] }
r2d2="*"
r2d2_redis = "*"
psutil = "3.2.1"
magic-crypt = "3.1.10"
bcrypt = "*"
simple-log = "1.6.0"

[dependencies.rocket_dyn_templates]
features = ["tera"]
default-features = false

